--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
             "media": []
         },
         "sdkVersion": "3",
+        "targetPlatforms": [
+            "aplite",
+            "basalt",
+            "chalk"
+        ],
         "uuid": "1b8d6185-e620-43fb-98e9-120f6c6132fb",
         "watchapp": {
-            "watchface": false
+            "watchface": true
         }
     },
     "version": "1.0.0"
